Fix some spacing on search result view

--- a/app/assets/stylesheets/earthworks.css
+++ b/app/assets/stylesheets/earthworks.css
@@ -216,6 +216,10 @@ Uncomment lines 142-144
 
 /* Styles for search result description expand/collapse */
 
+.index_title {
+  margin: 0 0 0.25em 0;
+}
+
 .expand-collapse .btn-outline-primary {
   display: flex;
   &.active {
@@ -226,6 +230,10 @@ Uncomment lines 142-144
 
 .expand-collapse i {
   align-self: center;
+}
+
+.more-info-area > div {
+  padding: 0;
 }
 
 /* Styles for code snippet */
@@ -278,9 +286,12 @@ Uncomment lines 142-144
   display: none;
 }
 
-label.toggle-bookmark {
-  --bs-primary: rgb(var(--bs-link-color-rgb));
-  color: rgb(var(--bs-link-color-rgb));
+.toggle-bookmark-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.1em;
+  font-size: var(--bs-body-font-size);
 }
 
 .header-tools .btn {
